Added mobile-friendly favicon and updated index.html with mobile meta tags

--- a/src/footer/footer.component.html
+++ b/src/footer/footer.component.html
@@ -12,7 +12,7 @@
     <div class="container">
       <div class="row">
         <div class="footer-col">
-          <h4>Sharip Lhakor</h4>
+          <h4>Dawa Lhakor</h4>
           <ul>
             <li><a routerLink="/about us">about us</a></li>
             
@@ -43,14 +43,15 @@
           <h4>Stay connected</h4>
           <div class="social-links">
           
-            <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.facebook.com/dawa.yoezer.980"><i class="fab fa-facebook-f"></i></a>
             <a href="https://twitter.com/?lang=en"><i class="fab fa-twitter"></i></a>
-            <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
-            <a href="https://bt.linkedin.com/"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://www.instagram.com/yoez_er/"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/dawa-yoezer-205788322/"><i class="fab fa-linkedin-in"></i></a>
           
           </div>
-          <div class="number">+975 77623430 | sharip Lhakor</div>
+          <div class="number">+975 77623430 | Dawa Lhakor</div>
         </div>
+        <p align="center" style="color: white;"> Design & Develop by Dawa Yoezer Dorji</p>
 
        
       </div>
