--- a/src/navbar/navbar.component.html
+++ b/src/navbar/navbar.component.html
@@ -12,7 +12,7 @@
   <nav class="navbar navbar-expand-lg bg-white shadow">
     <div class="container">
       <a class="navbar-brand" routerLink="/">
-        <a href="#" class="btn-shine">SHARIP LHAKOR</a>
+        <a href="#" class="btn-shine">DAWA LHAKOR</a>
 
       </a>
 
