--- a/src/pages/aboutus/aboutus.component.html
+++ b/src/pages/aboutus/aboutus.component.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <link rel="stylesheet" type="text/css" href="css/style.css"> -->
+  <link rel="stylesheet" type="text/css" href="aboutus.component.css">
   <title>Document</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
     <div class="container">
       <div class="hero-content">
         <h2>Welcome To Our Website</h2>
-        <p>At Sharip Lhakor, we are dedicated to providing reliable and convenient transportation solutions for our valued customers. Whether you need a ride to the airport, a quick trip across town, or a comfortable ride for a special occasion, we've got you covered.</p>
+        <p>At Dawa Lhakor, we are dedicated to providing reliable and convenient transportation solutions for our valued customers. Whether you need a ride to the airport, a quick trip across town, or a comfortable ride for a special occasion, we've got you covered.</p>
         <button class="cta-button"><a href="https://www.drukride.com/#menu-1">Learn More</a></button>
       </div>
       <div class="hero-image">
