--- a/src/pages/aboutus/aboutus.component.css
+++ b/src/pages/aboutus/aboutus.component.css
@@ -35,9 +35,10 @@
 }
 .hero-content p {
   font-size: 24px;
-  line-height: 1.5;
-  margin-bottom: 40px;
+  line-height: 1.3;
+  margin-bottom: 15px;
   color: #666;
+  text-align: justify;
 }
 .cta-button {
   
